--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons-vue": "^1.8.1",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
@@ -20,6 +21,7 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
+    "sass": "^1.52.2",
     "vite": "^2.9.5"
   }
 }
