--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "@vueform/slider": "^2.0.10",
     "bootstrap": "^5.1.3",
     "bootstrap-icons-vue": "^1.8.1",
     "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue-slider-component": "^4.0.0-beta.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
