--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "bootstrap-icons-vue": "^1.8.1",
+    "idb-keyval": "^6.2.0",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
