--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons-vue": "^1.8.1",
     "idb-keyval": "^6.2.0",
+    "key-value": "^0.0.1",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
     "vue-slider-component": "^4.0.0-beta.4"
